--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 *{
   padding: 0;
   margin: 0;
+  font-size: 14px;
+  box-sizing: border-box;
+  user-select: none;
 }
 
 body{
@@ -13,15 +16,48 @@ body{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* Window drag-able */
+  -webkit-app-region: no-drag;
+  overflow: hidden;
 }
 
-.input-container{
-  width: 100%;
-  height: 80px;
+.btn{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+  padding: 4px 10px;
+  border: 1px solid lightgray;
+  border-radius: 2px;
+  font-size: 13px;
+  cursor: pointer;
+}
+
+.btn:hover{
+  border-color: gray;
+}
+
+.header-container{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 10px;
+  flex-shrink: 0;
+}
+
+.header-container > .title-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.header-container > .title-container > .title-text{
+  font-size: 14px;
+  margin-right: 10px;
 }
 
 .video-container{
@@ -34,5 +70,8 @@ body{
 }
 
 .video-container > .video{
+  flex-grow: 1;
   width: 100%;
+  max-width: 100%;
+  max-height: 350px;
 }
