--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
-*{
+* {
   padding: 0;
   margin: 0;
   font-size: 14px;
   box-sizing: border-box;
+  outline: none;
   user-select: none;
+  -webkit-user-select: none;
+  -webkit-app-region: no-drag;
 }
 
-body{
+body {
   position: absolute;
   top: 0;
   left: 0;
@@ -16,12 +19,10 @@ body{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* Window drag-able */
-  -webkit-app-region: no-drag;
   overflow: hidden;
 }
 
-.btn{
+.btn {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -33,11 +34,11 @@ body{
   cursor: pointer;
 }
 
-.btn:hover{
+.btn:hover {
   border-color: gray;
 }
 
-.header-container{
+.header-container {
   width: 100%;
   height: 50px;
   display: flex;
@@ -46,30 +47,34 @@ body{
   align-items: center;
   padding: 5px 10px;
   flex-shrink: 0;
+  -webkit-app-region: drag;
 }
 
-.header-container > .title-container{
+.header-container>.title-container {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
 }
 
-.header-container > .title-container > .title-text{
+.header-container>.title-container>.title-text {
   font-size: 14px;
   margin-right: 10px;
+  cursor: pointer;
+  -webkit-app-region: drag;
 }
 
-.video-container{
+.video-container {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+  background-color: black;
 }
 
-.video-container > .video{
+.video-container>.player {
   flex-grow: 1;
   width: 100%;
   max-width: 100%;
