--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  padding-top: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -80,7 +81,6 @@ body {
 
 .video-container {
   width: 100%;
-  padding-top: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -93,6 +93,6 @@ body {
   flex-grow: 1;
   width: 100%;
   max-width: 100%;
-  height: 100%;
+  height: 350px;
   max-height: 100%;
 }
