--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   font-size: 14px;
   box-sizing: border-box;
   outline: none;
+  font-family: arial, sans-serif;
   user-select: none;
   -webkit-user-select: none;
   -webkit-app-region: no-drag;
@@ -15,7 +16,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  padding-top: 50px;
+  padding-top: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,15 +29,15 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 4px 10px;
-  border: 1px solid lightgray;
-  border-radius: 2px;
+  padding: 3px 10px;
+  border: 1px solid gray;
+  border-radius: 4px;
   font-size: 13px;
   cursor: pointer;
 }
 
 .btn:hover {
-  border-color: gray;
+  border-color: black;
 }
 
 .header-container {
@@ -45,14 +46,16 @@ body {
   left: 0;
   z-index: 100;
   width: 100%;
-  height: 50px;
+  height: 30px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding: 5px 10px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   -webkit-app-region: drag;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 .header-container>.title-container {
@@ -77,6 +80,7 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  -webkit-app-region: drag;
 }
 
 .video-container {
@@ -93,6 +97,5 @@ body {
   flex-grow: 1;
   width: 100%;
   max-width: 100%;
-  height: 350px;
   max-height: 100%;
 }
