--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,8 @@ body {
   border-top-right-radius: 5px;
   -webkit-app-region: drag;
   background-color: rgba(255, 255, 255, 0.9);
+  border: 1px solid lightgray;
+  border-bottom: none;
 }
 
 .header-container>.title-container {
